fix: burger header z-index

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  z-index: 4;
   &__burger {
     display: none;
     &-close {
@@ -87,7 +88,7 @@
       border-radius: 10px;
       background-color: $white;
       border: 2px solid $third;
-      z-index: 3;
+      z-index: 5;
       transition: .2s;
     }
     &__nav_burger {
